Issue 97 (Windows 10 App): Live blog view more updates misaligned, include css build files

--- a/test/unit/test.css
+++ b/test/unit/test.css
@@ -5676,15 +5676,21 @@
         #sandbox .more .more__button {
           font-size: 1.575rem;
           line-height: 2.275rem; } }
-    #sandbox .more .more__label:before {
-      position: relative;
-      font-size: 110%;
-      right: 5px; }
-    #sandbox .more .more__label:active {
-      color: #e6e6e6; }
-    #sandbox .more .more__text {
-      position: relative;
-      bottom: 3px; }
+    #sandbox .more .more__label {
+      padding: 6px 12px 6px 6px;
+      position: static; }
+      #sandbox .more .more__label:before {
+        position: relative;
+        font-size: 110%;
+        right: 5px; }
+      #sandbox .more .more__label:active {
+        color: #e6e6e6; }
+    #sandbox .more .more__text,
+    #sandbox .more .more__icon {
+      display: inline-block;
+      padding: 0px 6px;
+      vertical-align: top;
+      margin-top: -1px; }
   #sandbox .more--comments {
     padding-top: 12px;
     border-top: 1px dotted #dcdad5; }
@@ -5698,19 +5704,12 @@
       #sandbox .more--comments {
         margin-left: 31.57895%; } }
     #sandbox .more--comments .more__label {
-      background-color: #005689;
-      padding: 6px 12px 6px 6px;
-      position: static; }
+      background-color: #005689; }
       #sandbox .more--comments .more__label:active {
         background-color: #003656; }
     #sandbox .more--comments .more__text,
     #sandbox .more--comments .more__icon {
-      color: #fff;
-      display: inline-block;
-      position: static;
-      padding: 0px 6px;
-      vertical-align: top;
-      margin-top: -1px; }
+      color: #fff; }
   #sandbox .more--live-blogs {
     border-bottom: 1px dotted #dcdad5; }
     @media all and (max-width: 40.615em) {
